# odc-mvp

./: .gitignore  README.md  compose.yaml  compose.yml  docker-compose-dea-dev.yml  docker-compose-dea-prod.yml  docker-compose-odc-1p8.yml  docker-compose-odc-1p9.yml  docker-compose.ows.yml  environment-prod.yaml  environment.yml  environment_prod.yaml  loading.ipynb  pixi.toml
config/: dea_prod_ows_config.py  general_cfg.py  minimal_ows_config.py  s1_cfg.py  s1_style_functions.py  s1_styles.py  s2_cfg.py
data/sentinel1/compass/isce3/: OPERA_L2_RTC-S1A_IW_SLC__1SDV_20220106T191355_20220106T191422_041344_04EA48_E185_CSLC_BACKSCATTER_TRY-odc-metadata.yaml  (+1 more)
dataset_prepare_scripts/: prepare_s1_compass_isce3_backscatter.py  prepare_s1_pyrosar_gamma_backscatter.py  pyproject.toml
dataset_prepare_scripts/utils/: aws_s3.py  cli.py
docs/: README.md  odc_conda.md  odc_ows_dockercompose.md
docs/indexing/: compass_isce3.md  pyrosar_gamma.md
docs/ows/: ows.md
indexing_script/: datacube_indexing.sh
notebooks/: datacube_loading.ipynb  ows_styling.ipynb  stac_loading.ipynb
ows_src/config/: minimal_ows_config.py  s1_cfg.py
ows_src/datacube_ows/: ogc.py
products/sentinel1/: s1_compass_isce3_backscatter.yml  s1_pyrosar_gamma_backscatter.yml
scripts/: datacube_1p8_indexing.sh  datacube_1p9_indexing.sh  datacube_ows_update_and_run_1p8.sh  datacube_ows_update_and_run_1p9.sh  dea_dev_explorer.sh  dea_dev_ows.sh  dea_prod_indexing.sh  dea_prod_ows.sh  deaprod_explorer.sh  deaprod_indexing.sh  deaprod_ows.sh
(+28 files in other folders)
